src/index.scss
//############################ Colors #######################

:root {
  --page-background: #ffffff;
  --main: #003566;
  --blue: #003566;
  --blue-dark: #001d3d;
  --yellow: #ffc300;
  --yellow2: #ffd60a;
  --green: #0da000;
  --red: #f70401;
  --red2: #d9100e;
  --white: #ffffff;
  --grey: rgba(0, 0, 0, 0.5);
  --grey2: rgba(0, 53, 102, 0.11);
}

p::selection,
h1::selection,
h2::selection,
h3::selection,
h4::selection,
h5::selection,
h6::selection,
span::selection,
div::selection,
*::selection {
  background: var(--main);
  color: white;
}

//############################ Scroll #######################

// ::-webkit-scrollbar {
//   width: 10px;
// }

// ::-webkit-scrollbar-thumb {
//   background: var(--main);
//   border: 1px solid var(--page-background2);
// }

// ::-webkit-scrollbar-track {
//   background-color: var(--page-background2);
// }

* {
  scrollbar-width: none;
}

::-webkit-scrollbar {
  display: none;
}

//############################ FONTS #######################

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Thin.ttf");
  font-weight: 100;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-ExtraLight.ttf");
  font-weight: 100;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Light.ttf");
  font-weight: 200;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Regular.ttf");
  font-weight: 300;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Medium.ttf");
  font-weight: 400;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-SemiBold.ttf");
  font-weight: 500;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Bold.ttf");
  font-weight: 600;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-ExtraBold.ttf");
  font-weight: 700;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Black.ttf");
  font-weight: 800;
}

@font-face {
  font-family: "Poppin";
  src: url("./assets/fonts/Poppins-Black.ttf");
  font-weight: 900;
}

// -----------------------

@font-face {
  font-family: "PoetsenOne";
  src: url("./assets/fonts//PoetsenOne-Regular.ttf");
  font-weight: 400;
}

//############################ COMMON #######################

body {
  margin: 0;
  padding: 0;
  background-color: var(--page-background);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Poppin";
}

a {
  text-decoration: none;
  color: inherit;
}

